objects/Qualification_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Values__c</fullName>
        <label>Accepted Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>Text to populate Disqualified Reason with when a Lead is disqualified because of this Rule</description>
        <label>Disqualified Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Field_Name__c</fullName>
        <inlineHelpText>Name of the field on the Eloqua landing page form</inlineHelpText>
        <label>Eloqua Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <inlineHelpText>Field types supported by Dynaform</inlineHelpText>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order in which the Rule is evaluated</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <referenceTo>Qualification__c</referenceTo>
        <relationshipLabel>Qualification Rules</relationshipLabel>
        <relationshipName>Qualification_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Qualification Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Qualification Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>